force-app/main/default/objects/Opportunity/fields/Is_Current_User_the_Presales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_the_Presales_Agent__c</fullName>
    <formula>IF($User.Id == Presales_Agent__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User the Presales Agent</label>
    <type>Checkbox</type>
</CustomField>