force-app/main/default/objects/Opportunity/fields/Is_NRI__c.field-meta.xml
<CustomField>
    <fullName>Is_NRI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To assign lead to NRI TL</description>
    <label>Is_NRI</label>
    <type>Checkbox</type>
</CustomField>