force-app/main/default/objects/Opportunity/fields/Is_Re_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Is_Re_Enquiry__c</fullName>
    <formula>IF(Date_Of_Enquiry__c &gt;  Datevalue(Last_Call_Attempt_Date__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Re-Enquiry</label>
    <type>Checkbox</type>
</CustomField>