force-app/main/default/objects/Opportunity/fields/Is_Reblocked_from_Page__c.field-meta.xml
<CustomField>
    <fullName>Is_Reblocked_from_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reblocked From Page</label>
    <type>Checkbox</type>
</CustomField>