force-app/main/default/objects/Opportunity/fields/Is_Revisit_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Revisit_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revisit Done</label>
    <type>Checkbox</type>
</CustomField>