force-app/main/default/objects/Opportunity/fields/IsServiced__c.field-meta.xml
<CustomField>
    <fullName>IsServiced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Serviced</label>
    <type>Checkbox</type>
</CustomField>