force-app/main/default/objects/Opportunity/fields/L3_to_be_sent_on__c.field-meta.xml
<CustomField>
    <fullName>L3_to_be_sent_on__c</fullName>
    <label>Third Letter to be sent on</label>
    <type>Date</type>
</CustomField>