force-app/main/default/objects/Opportunity/fields/L4_to_be_sent_on__c.field-meta.xml
<CustomField>
    <fullName>L4_to_be_sent_on__c</fullName>
    <label>Fourth Letter to be sent on</label>
    <type>Date</type>
</CustomField>