force-app/main/default/objects/Opportunity/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <label>Landing Page URL</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>