force-app/main/default/objects/Opportunity/fields/LANGUAGE__c.field-meta.xml
<CustomField>
    <fullName>LANGUAGE__c</fullName>
    <label>LANGUAGE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>