force-app/main/default/objects/Opportunity/fields/Last_call_attempt_status__c.field-meta.xml
<CustomField>
    <fullName>Last_call_attempt_status__c</fullName>
    <label>Presales Last Call Attempt Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>