force-app/main/default/objects/Opportunity/fields/Last_VDNB_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_VDNB_Attempt_Date__c</fullName>
    <label>Last VDNB Call Attempt Date</label>
    <type>DateTime</type>
</CustomField>