force-app/main/default/objects/Opportunity/fields/Last_VDNB_Attempted_By__c.field-meta.xml
<CustomField>
    <fullName>Last_VDNB_Attempted_By__c</fullName>
    <label>Last VDNB Call Attempted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>