force-app/main/default/objects/Opportunity/fields/Last_VDNB_Call_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_VDNB_Call_Description__c</fullName>
    <label>Last VDNB Call Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>