force-app/main/default/objects/Opportunity/fields/Latest_Demand_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Demand_Due_Date__c</fullName>
    <label>Latest Demand Due Date</label>
    <type>Date</type>
</CustomField>