force-app/main/default/objects/Opportunity/fields/Latest_SM_Comments__c.field-meta.xml
<CustomField>
    <fullName>Latest_SM_Comments__c</fullName>
    <label>Latest SM Comments</label>
    <type>TextArea</type>
</CustomField>