force-app/main/default/objects/Opportunity/fields/Latest_Task_Comments__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Comments__c</fullName>
    <label>Latest Task Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>