force-app/main/default/objects/Opportunity/fields/Latest_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Due_Date__c</fullName>
    <label>Latest Task Due Date</label>
    <type>DateTime</type>
</CustomField>