force-app/main/default/objects/Opportunity/fields/Latest_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Latest_Task_Id__c</fullName>
    <externalId>true</externalId>
    <label>Latest Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>