force-app/main/default/objects/Opportunity/fields/Lead_Id_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_Numeric__c</fullName>
    <formula>MID(Lead_Id__c, 8, 13)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Id (Numeric)</label>
    <type>Text</type>
</CustomField>