force-app/main/default/objects/Opportunity/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Live ads</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Cityscape</fullName>
            </value>
            <value>
                <fullName>Tollfree</fullName>
            </value>
            <value>
                <fullName>Facebook LeadGen</fullName>
            </value>
            <value>
                <fullName>Cairo_07FEB2019_Tarek</fullName>
            </value>
            <value>
                <fullName>Lagos_12Jan2019_Anil</fullName>
            </value>
            <value>
                <fullName>bayut</fullName>
            </value>
            <value>
                <fullName>dubizzle</fullName>
            </value>
            <value>
                <fullName>affiliate-araby-ads</fullName>
            </value>
            <value>
                <fullName>direct-website</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>google-display</fullName>
            </value>
            <value>
                <fullName>google-search</fullName>
            </value>
            <value>
                <fullName>portal-bayut</fullName>
            </value>
            <value>
                <fullName>portal-dubizzle</fullName>
            </value>
            <value>
                <fullName>portal-propertyfinder</fullName>
            </value>
            <value>
                <fullName>publisher-etiquettels</fullName>
            </value>
            <value>
                <fullName>publisher-linkedin</fullName>
            </value>
            <value>
                <fullName>publisher-nabd</fullName>
            </value>
            <value>
                <fullName>publisher-oath</fullName>
            </value>
            <value>
                <fullName>publisher-skynews</fullName>
            </value>
            <value>
                <fullName>publisher-taboola</fullName>
            </value>
            <value>
                <fullName>publisher-times-of-india</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>