force-app/main/default/objects/Opportunity/fields/Legacy_Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Booking_Id__c</fullName>
    <label>Legacy Booking Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>