force-app/main/default/objects/Opportunity/fields/letters_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>letters_Sent_to_Customer__c</fullName>
    <label>Letters Sent to Customer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allotment Letter</fullName>
            </value>
            <value>
                <fullName>Cancellation Letter</fullName>
            </value>
            <value>
                <fullName>Car Parking No Allotment Letter</fullName>
            </value>
            <value>
                <fullName>Demand Letter for Stamp Duty and Reg Fee</fullName>
            </value>
            <value>
                <fullName>Fit Out Possesion Letter</fullName>
            </value>
            <value>
                <fullName>Intimation cum possession letter BMC</fullName>
            </value>
            <value>
                <fullName>Intimation cum possession letter MMRDA</fullName>
            </value>
            <value>
                <fullName>Intimation for Registration of Agreement</fullName>
            </value>
            <value>
                <fullName>Notice Before Cancellation Letter Un-Reg</fullName>
            </value>
            <value>
                <fullName>Reminder No.1 of registered unit</fullName>
            </value>
            <value>
                <fullName>Reminder No.2 of registered unit</fullName>
            </value>
            <value>
                <fullName>Reminder No.1 of unregistered unit</fullName>
            </value>
            <value>
                <fullName>Reminder No.2 of unregistered unit</fullName>
            </value>
            <value>
                <fullName>Term. Notice of Reg. agrmnt before issue</fullName>
            </value>
            <value>
                <fullName>Term. letter of Reg. agrmnt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>