force-app/main/default/objects/Opportunity/fields/LEVEL_Warm_or_Hot__c.field-meta.xml
<CustomField>
    <fullName>LEVEL_Warm_or_Hot__c</fullName>
    <label>LEVEL (Warm or Hot)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>