force-app/main/default/objects/Opportunity/fields/Location_Project__c.field-meta.xml
<CustomField>
    <fullName>Location_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location / Project</label>
    <type>Checkbox</type>
</CustomField>