force-app/main/default/objects/Opportunity/fields/Loyalty_Client_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Client_Nationality__c</fullName>
    <label>Loyalty Client Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>