force-app/main/default/objects/Opportunity/fields/MM__c.field-meta.xml
<CustomField>
    <fullName>MM__c</fullName>
    <label>MM</label>
    <length>15</length>
    <type>Text</type>
</CustomField>