force-app/main/default/objects/Opportunity/fields/Mobile_Landline_number_and_email_id_is__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Landline_number_and_email_id_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile, Landline Number and Email Id Is</label>
    <type>Checkbox</type>
</CustomField>