force-app/main/default/objects/Opportunity/fields/Mobile_No_O__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_O__c</fullName>
    <label>Mobile No(O)</label>
    <type>Phone</type>
</CustomField>