force-app/main/default/objects/Opportunity/fields/Mobile_of_Refree__c.field-meta.xml
<CustomField>
    <fullName>Mobile_of_Refree__c</fullName>
    <label>Mobile Of Refree</label>
    <type>Phone</type>
</CustomField>