force-app/main/default/objects/Opportunity/fields/Name_of_Refree__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Refree__c</fullName>
    <label>Name Of Refree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>