force-app/main/default/objects/Opportunity/fields/Name_of_the_Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Financial_Institution__c</fullName>
    <label>Name Of The Financial Institution</label>
    <length>150</length>
    <type>Text</type>
</CustomField>