force-app/main/default/objects/Opportunity/fields/Name_of_TL__c.field-meta.xml
<CustomField>
    <fullName>Name_of_TL__c</fullName>
    <label>Closing TL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>