force-app/main/default/objects/Opportunity/fields/NATIONALITY__c.field-meta.xml
<CustomField>
    <fullName>NATIONALITY__c</fullName>
    <label>NATIONALITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>