force-app/main/default/objects/Opportunity/fields/Nationality_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Nationality_on_Account__c</fullName>
    <formula>TEXT(Account.Nationality__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality on Account</label>
    <type>Text</type>
</CustomField>