force-app/main/default/objects/Opportunity/fields/New_Channel_Partner_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Partner_Email__c</fullName>
    <label>New Channel Partner Email</label>
    <type>Email</type>
</CustomField>