force-app/main/default/objects/Opportunity/fields/Next_Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Description__c</fullName>
    <label>Next Step Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step 1</fullName>
            </value>
            <value>
                <fullName>Step 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>