force-app/main/default/objects/Opportunity/fields/Number_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Month__c</fullName>
    <formula>-1 * (MONTH(DATEVALUE(CreatedDate)) + (12*(YEAR(DATEVALUE(CreatedDate))-YEAR(TODAY()))) - MONTH(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>