force-app/main/default/objects/Opportunity/fields/Opportunity_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ageing__c</fullName>
    <formula>Today() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>