force-app/main/default/objects/Opportunity/fields/Opportunity_created_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_created_date_and_time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity created date and time</label>
    <type>DateTime</type>
</CustomField>