force-app/main/default/objects/Opportunity/fields/OS_NRI_TL__c.field-meta.xml
<CustomField>
    <fullName>OS_NRI_TL__c</fullName>
    <label>OS/NRI TL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO OS/NRI TL</fullName>
            </value>
            <value>
                <fullName>Maurya Krishna</fullName>
            </value>
            <value>
                <fullName>Chandrashekhar Arelly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>