force-app/main/default/objects/Opportunity/fields/Other_Applicant_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Applicant_Mobile_Number__c</fullName>
    <label>Other Applicant Mobile Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>