force-app/main/default/objects/Opportunity/fields/Other_Applicants_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Applicants_Email__c</fullName>
    <label>Other Applicants Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>