force-app/main/default/objects/Opportunity/fields/Other_Applicants_Pancard__c.field-meta.xml
<CustomField>
    <fullName>Other_Applicants_Pancard__c</fullName>
    <label>Other Applicants Pancard</label>
    <length>150</length>
    <type>Text</type>
</CustomField>