force-app/main/default/objects/Opportunity/fields/Overwriting_Cancellation_White_ink_sign__c.field-meta.xml
<CustomField>
    <fullName>Overwriting_Cancellation_White_ink_sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwriting/Cancellation/White Ink-Sign</label>
    <type>Checkbox</type>
</CustomField>