force-app/main/default/objects/Opportunity/fields/Page_Running__c.field-meta.xml
<CustomField>
    <fullName>Page_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Page Running</label>
    <type>Checkbox</type>
</CustomField>