force-app/main/default/objects/Opportunity/fields/PAN_Card_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_No__c</fullName>
    <label>PAN Card No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>