force-app/main/default/objects/Opportunity/fields/PAN_Card_Received__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAN Card Received</label>
    <type>Checkbox</type>
</CustomField>