force-app/main/default/objects/Opportunity/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No.</label>
    <length>8</length>
    <type>Text</type>
</CustomField>