force-app/main/default/objects/Opportunity/fields/Payment_Plan_Comments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Comments__c</fullName>
    <label>Payment Plan Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>