force-app/main/default/objects/Opportunity/fields/Payment_Plan_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Fixed</label>
    <type>Checkbox</type>
</CustomField>