force-app/main/default/objects/Opportunity/fields/Payment_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Status__c</fullName>
    <label>Payment Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>