force-app/main/default/objects/Opportunity/fields/Payment_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Type__c</fullName>
    <label>Payment Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>