force-app/main/default/objects/Opportunity/fields/Physical_document_received__c.field-meta.xml
<CustomField>
    <fullName>Physical_document_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Document Received</label>
    <type>Checkbox</type>
</CustomField>