force-app/main/default/objects/Opportunity/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>TextArea</type>
</CustomField>