force-app/main/default/objects/Opportunity/fields/POI_Card_No__c.field-meta.xml
<CustomField>
    <fullName>POI_Card_No__c</fullName>
    <label>POI Card No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>