force-app/main/default/objects/Opportunity/fields/Presales_Last_Call_Sub_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Presales_Last_Call_Sub_Disposition__c</fullName>
    <label>Presales Last Call Sub Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>