force-app/main/default/objects/Opportunity/fields/Presales_Role__c.field-meta.xml
<CustomField>
    <fullName>Presales_Role__c</fullName>
    <formula>Presales_Agent__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presales Role</label>
    <type>Text</type>
</CustomField>