force-app/main/default/objects/Opportunity/fields/Presales_Team__c.field-meta.xml
<CustomField>
    <fullName>Presales_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales Team</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>