force-app/main/default/objects/Opportunity/fields/Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Name__c</fullName>
    <label>Primary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>