force-app/main/default/objects/Opportunity/fields/Primary_pancard__c.field-meta.xml
<CustomField>
    <fullName>Primary_pancard__c</fullName>
    <label>Primary PAN Card</label>
    <length>100</length>
    <type>Text</type>
</CustomField>